--- a/aboly.html
+++ b/aboly.html
@@ -818,7 +818,7 @@ img.characterimg {
 <li><p><span class="lyterm">言可复也</span>：说过的话能够兑现。<span class="lyterm">复</span>：抵偿，偿还，引申为履行，实践。</p></li>
 <li>
 <p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得学习的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。</p>
-<p>这句话如果没有“因”，含义就比较明确，句式也更整齐；结合后文看，说的应是<a href="#junzi">君子</a>在人伦方面的表率作用。<a href="#8.2" class="lyref">8.2</a> <span class="lyq">君子笃于亲，则民兴于仁；故旧不遗，则民不偷。</span><a href="#18.10" class="lyref">18.10</a> <span class="lyq">君子不施其亲，不使大臣怨乎不以，故旧无大故则不弃也。</span></p>
+<p>这句话如果没有“因”，含义就比较明确，句式也更整齐；结合后文看，说的应是<a href="#junzi">君子</a>在人伦方面的表率作用。<span class="lyseealso"><span>【参】</span><span><a href="#8.2" class="lyref">8.2</a> <span class="lyq">君子笃于亲，则民兴于仁；故旧不遗，则民不偷。</span><a href="#18.10" class="lyref">18.10</a> <span class="lyq">君子不施其亲，不使大臣怨乎不以，故旧无大故则不弃也。</span>孔子对待老友<a href="#yuanrang">原壤</a>的出格行为，也有类似的话。</span></span></p>
 </li>
 </ul></div>
 </div>
@@ -1254,9 +1254,9 @@ img.characterimg {
 <li><p><span class="lyterm">宁</span>（<span class="lypinyin">nìng</span>）：情愿，宁愿。<span class="lyexample"><span>【例】</span><span>成语“宁缺勿滥”。</span></span></p></li>
 <li>
 <p><span class="lyterm">易</span>：指（因悲痛过度而）神志混乱，变得魔魔怔怔的。<span class="lyexample"><span>【例】</span><span>《韩非子·内储说下》：<span class="lyq">燕人其妻有私通于士，其夫早自外而来，士适出。夫曰：“何客也？”其妻曰：“无客。”问左右，左右言“无有”，如出一口。其妻曰：“公惑易也。”</span></span></span></p>
-<p>从相反的角度，也可以理解成简易，简慢。这两种解释均与各家不同，他们多根据上下文强解为排场铺张。<span class="lyseealso"><span>【参】</span><span>《孔子家语·曲礼子夏问》：<span class="lyq">子贡问居父母丧，孔子曰：“敬为上，哀次之，瘠为下。<a href="#yanse">颜色</a>称情，戚容称<a href="#wufu">服</a>。”</span>（瘠（<span class="lypinyin">jí</span>）：菲薄。《荀子·礼论》：<span class="lyq">送死不忠厚、不敬文，谓之瘠。</span>例如<a href="#yuanrang">原壤</a>。称（<span class="lypinyin">chèn</span>）：符合，相称。）</span></span></p>
+<p>从相反的角度，也可以理解成简易，简慢。这两种解释均与各家不同，他们多根据上下文强解为排场铺张。<span class="lyseealso"><span>【参】</span><span>《孔子家语·曲礼子夏问》：<span class="lyq">子贡问居父母丧，孔子曰：“敬为上，哀次之，瘠为下。<a href="#yanse">颜色</a>称情，戚容称<a href="#wufu">服</a>。”</span>（瘠（<span class="lypinyin">jí</span>）：菲薄。《荀子·礼论》：<span class="lyq">送死不忠厚、不敬文，谓之瘠</span>，例如<a href="#yuanrang">原壤</a>。称（<span class="lypinyin">chèn</span>）：符合，相称。）</span></span></p>
 </li>
-<li><p><span class="lyterm">戚</span>：悲伤，忧愁。<span class="lyexample"><span>【例】</span><span>成语“休戚与共”（休：喜悦，快乐）。</span></span></p></li>
+<li><p><a id="qi1"></a><span class="lyterm">戚</span>：悲伤，忧愁。<span class="lyexample"><span>【例】</span><span>成语“休戚与共”（休：喜悦，快乐）。</span></span></p></li>
 </ul></div>
 </div>
 <a id="3.5"></a><div class="lyblob">
@@ -2815,15 +2815,15 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子坦荡荡，小人长戚戚。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">坦荡荡</span>：心胸坦率宽广。<span class="lyterm">坦</span>：平直宽广。<a id="dangdang"></a><span class="lyterm">荡荡</span>：空旷广大的样子。</p></li>
-<li><p><span class="lyterm">长戚戚</span>：经常忧愁恐惧。</p></li>
+<li><p><span class="lyterm">长<a href="#qi1">戚</a>戚</span>：经常忧愁恐惧。<span class="lyseealso"><span>【参】</span><span><a href="#12.4" class="lyref">12.4</a> <span class="lyq">内省不疚，夫何忧何惧？</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="7.38"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.38">7.38</a></div>
 <div class="lybloboriginaltext"><p>子温而厉，威而不猛，恭而安。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">温</span>：温和。<a id="li4d"></a><span class="lyterm">厉</span>：严肃，其本义为粗磨刀石，是“砺”的本字。<span class="lyseealso"><span>【参】</span><span><a href="#1.10" class="lyref">1.10</a> </span></span></p></li>
-<li><p> 同样是具有力量，<span class="lyterm">威</span>的尊严使人敬仰信服，<span class="lyterm">猛</span>的凶恶使人畏惧远离。</p></li>
+<li><p><span class="lyterm">温</span>：温和。<a id="li4d"></a><span class="lyterm">厉</span>：严肃，其本义为粗磨刀石，是“砺”的本字。</p></li>
+<li><p> 同样是具有力量，<span class="lyterm">威</span>的尊严使人敬仰信服，<span class="lyterm">猛</span>的凶恶使人畏惧远离。<span class="lyseealso"><span>【参】</span><span><a href="#20.2" class="lyref">20.2</a>  孔子有进一步的解释：<span class="lyq">君子正其衣冠，尊其瞻视，俨然人望而<a href="#wei4a">畏</a>之，斯不亦威而不猛乎？</span></span></span></p></li>
 <li><p><span class="lyterm">恭</span>：恭谨守礼。<span class="lyterm">安</span>：安详不做作。</p></li>
 </ul></div>
 </div>
@@ -5078,11 +5078,11 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#14.43">14.43</a></div>
 <div class="lybloboriginaltext"><p>原壤夷俟。子曰：“幼而不孙弟，长而无述焉，老而不死，是为贼！”以杖叩其胫。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="yuanrang"></a><span class="lyterm">原壤</span>：鲁国人，孔子的老朋友，从仅存的事迹来看，是个玩世不恭的人。《礼记·檀弓下》载，原壤的母亲亡故后，孔子去他家帮忙，他却站上棺木唱起很不正经的歌。别人都看不下去劝孔子别管了，孔子不以为意，认为<span class="lyq">亲者毋失其为亲也，故者毋失其为故也。</span>原壤与《庄子·至乐》里，庄子丧妻却<span class="lyq"><a href="#yisi">箕踞</a>鼓盆而歌</span>的行为很像。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> 。《庄子·大宗师》：<span class="lyq">大块载我以形，劳我以生，<a href="#yi4b">佚</a>我以老，息我以死。</span>（大块：大自然。）《庄子·至乐》：<span class="lyq">今又变而之死，是相与为春秋冬夏四时行也。人且偃然寝于巨室，而我噭噭然随而哭之，自以为不通乎命。</span>（巨室：喻天地间。噭噭（<span class="lypinyin">jiào</span>）：悲哭声。）</span></span></p></li>
-<li><p><a id="yisi"></a><span class="lyterm">夷俟</span>：张着腿坐在地上等人。<span class="lyterm">夷</span>：即夷踞，也叫箕踞，屁股坐在地上八字形伸开两腿，样子像个簸箕，这是当时东部少数民族（<a href="#yidihuaxia">夷人</a>）的坐姿，被认为很没有礼貌。</p></li>
+<li><p><a id="yuanrang"></a><span class="lyterm">原壤</span>：鲁国人，孔子的老朋友，从仅存的事迹来看，是个玩世不恭的人。《礼记·檀弓下》载，原壤的母亲过世，孔子去他家帮忙，他却站上棺木，唱起很不正经的歌。别人都看不过眼，劝孔子别管了，孔子仍不以为意，认为：<span class="lyq">亲者毋失其为亲也，故者毋失其为故也。</span>原壤与《庄子·至乐》所载，庄子丧妻却<span class="lyq"><a href="#yisi">箕踞</a>鼓盆而歌</span>的行为很像。<span class="lyseealso"><span>【参】</span><span>《庄子·大宗师》：<span class="lyq">大块载我以形，劳我以生，<a href="#yi4b">佚</a>我以老，息我以死。</span>（大块：大自然。）《庄子·至乐》：<span class="lyq">今又变而之死，是相与为春秋冬夏四时行也。人且偃然寝于巨室，而我噭噭然随而哭之，自以为不通乎命。</span>（巨室：喻天地间。噭噭（<span class="lypinyin">jiào</span>）：悲哭声。）</span></span></p></li>
+<li><p><a id="yisi"></a><span class="lyterm">夷<a href="#si4a">俟</a></span>：张着腿坐在地上等人。<span class="lyterm">夷</span>：即夷踞，也叫箕踞，屁股坐在地上八字形伸开两腿，样子像个簸箕，这是当时东部少数民族（<a href="#yidihuaxia">夷人</a>）的坐姿，被认为很没有礼貌。</p></li>
 <li><p><span class="lyterm">无述</span>：指没有值得后生晚辈学习传承的东西，相当于说没出息。</p></li>
-<li><p> 孔子说原壤<span class="lyterm">是为<a href="#zei2">贼</a></span>，是说他小时候不老实，到老了也没成就，偏偏活得久给人做坏榜样，而不仅仅因为“老而不死”。</p></li>
-<li><p><span class="lyterm">以杖叩其胫</span>是让原壤把腿收起来坐端正，属于老朋友才会有的举动。<span class="lyterm">胫</span>（<span class="lypinyin">jìng</span>）：小腿。<span class="lyexample"><span>【例】</span><span>《史记·李斯列传》引韩非语，感慨<a href="#yu">禹</a>长年在外治水，<span class="lyq">股无胈，胫无毛，手足胼胝，面目黎黑，遂以死于外，葬于会稽，臣虏之劳不<a href="#lie4">烈</a>于此矣。</span>（股：大腿。胈（<span class="lypinyin">bá</span>）：细毛。胼胝（<span class="lypinyin">pián zhī</span>）：老茧。会（<span class="lypinyin">kuài</span>）稽：指会稽山，在今浙江省绍兴市南。<a href="#chen2">臣</a>虏：奴隶。）</span></span></p></li>
+<li><p> 孔子说原壤<span class="lyterm">是为<a href="#zei2">贼</a></span>，是责备他小时候不老实，到老了也没成就，偏偏活得久给人做坏榜样，而不仅仅因为“老而不死”。</p></li>
+<li><p><span class="lyterm">以杖叩其胫</span>是让原壤把腿收起来坐端正，属于老朋友才会有的举动。<span class="lyterm">胫</span>（<span class="lypinyin">jìng</span>）：小腿。<span class="lyexample"><span>【例】</span><span>《史记·李斯列传》引韩非语，感慨<a href="#yu">禹</a>长年在外治水，<span class="lyq">股无胈，胫无毛，手足胼胝，面目黎黑，……臣虏之劳不<a href="#lie4">烈</a>于此矣。</span>（股：大腿。胈（<span class="lypinyin">bá</span>）：细毛。胼胝（<span class="lypinyin">pián zhī</span>）：老茧。<a href="#chen2">臣</a>虏：奴隶。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="14.44"></a><div class="lyblob">
@@ -5540,7 +5540,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.8">16.8</a></div>
 <div class="lybloboriginaltext"><p>孔子曰：“君子有三畏：畏天命，畏大人，畏圣人之言。小人不知天命而不畏也，狎大人，侮圣人之言。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">畏</span>：敬重，心服。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">贤者<a href="#xia2">狎</a>而敬之，畏而爱之。</span></span></span></p></li>
+<li><p><a id="wei4a"></a><span class="lyterm">畏</span>：敬重，心服。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">贤者<a href="#xia2">狎</a>而敬之，畏而爱之。</span></span></span></p></li>
 <li><p><span class="lyterm">大人</span>：<a href="#daren">身居高位者</a>。如古装剧中平民见长官、下级见上级，即称大人。<span class="lyterm">畏大人</span>在当时是服从等级制度，在现代语境中相当于遵守社会秩序。</p></li>
 <li><p><a id="wu3"></a><span class="lyterm">侮</span>：轻慢，这是其本义。<span class="lyexample"><span>【例】</span><span>《荀子·君子》：<span class="lyq">刑当罪则威，不当罪则侮。</span>（当（<span class="lypinyin">dàng</span>）：合宜，相称。）</span></span><span class="lyseealso"><span>【参】</span><span>清代李颙（<span class="lypinyin">yóng</span>）《四书反身录》：<span class="lyq">读圣人之书而不能实体诸躬、见诸行，徒讲说论撰，假途<a href="#gan1">干</a>荣，皆侮圣言也。</span></span></span></p></li>
 </ul></div>
@@ -6494,7 +6494,7 @@ img.characterimg {
 <p><a id="yanpingzhong"></a><span class="lycharname">晏平仲</span>：晏婴（前578年—前500年），平是他的谥号（“布纲治纪曰平”），仲是他的字。春秋后期齐国灵公、庄公、<a href="#qijinggong">景公</a>的三朝重臣，娴于外交，智慧通达，节俭力行。《史记·管晏列传》简要记述了他的事迹，《晏子春秋》集中载录了他的言行活动。 <a href="#5.17" class="lyref">5.17</a> </p>
 <p><a id="yao"></a><span class="lycharname">尧</span>（约前2300年前后）：陶唐氏，名放勋，又称唐尧，上古传说中<a href="#wudi">五帝</a>的第4位，是五帝第3位喾的次子。尧20岁登帝位，仁智明德，亲亲利民，《史记·五帝本纪》形容他<span class="lyq">其<a href="#ren2">仁</a>如天，其<a href="#zhi4d">知</a>如神，<a href="#jiu4a">就</a>之如日，望之如云。</span>他在位70年后退居二线，授权给有孝德的平民<a href="#shun">舜</a>，20年后荐舜摄天子政，又8年后去世，<span class="lyq">百姓悲哀，如丧父母。</span>后来“尧舜<a href="#yu">禹</a><a href="#tang">汤</a>”、“二帝三王”（尧、舜；禹、汤、<a href="#wu">周武王</a>）被儒家奉为圣明君主的代名词。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.19" class="lyref">8.19</a> <a href="#14.42" class="lyref">14.42</a> <a href="#20.1" class="lyref">20.1</a> </p>
 <p><a id="yegong"></a><span class="lycharname">叶（旧读<span class="lypinyin">shè</span>）公</span>：沈诸梁，字子高，楚国大臣，曾被楚昭王任命为叶县（在今河南省叶县南）长官，故称叶公，是叶姓始祖。在叶任内，他积极兴修水利，深受民众爱戴。前479年（同年孔子去世），楚惠王之孙谋反，叶公领兵平定了叛乱，这时他身兼令尹（最高政务长官）、司马（最高军事长官）二职，事态平静后却立即退休，终老于叶，享年89岁。传说为求龙王保佑风调雨顺，叶公让在每个出水口画上龙像，成为“水龙头”的由来。“叶公好龙”是刘向《新序》托叶公之名虚构的寓言。 <a href="#7.19" class="lyref">7.19</a> <a href="#13.16" class="lyref">13.16</a> <a href="#13.18" class="lyref">13.18</a> </p>
-<p><a id="yu"></a><span class="lycharname">禹</span>（约前2100年前后）：夏后氏，名文命，又称夏禹、大禹。他是中国历史上最伟大的水利工程师，<a href="#yao">尧帝</a>时受<a href="#shun">舜</a>举荐，治理肆虐天下的<a href="#dayuzhishui">洪水</a>，<span class="lyq">劳身焦思，居外十三年，过家门不敢入</span>。采用疏导之法，定<a href="#sanfentianxia">九州</a>、测九山、通九道、筑九堤，终告成功，使<a href="#zhongyuan">中原</a>成为宜居之地。禹为人勤勉务实，以身作则，可亲可信，受舜禅让为帝，在位10年后去世。 <a href="#8.18" class="lyref">8.18</a> <a href="#8.21" class="lyref">8.21</a> <a href="#14.5" class="lyref">14.5</a> <a href="#20.1" class="lyref">20.1</a> </p>
+<p><a id="yu"></a><span class="lycharname">禹</span>（约前2100年前后）：夏后氏，名文命，又称夏禹、大禹。他是中国历史上最伟大的水利工程师，<a href="#yao">尧帝</a>时受<a href="#shun">舜</a>举荐，治理肆虐天下的<a href="#dayuzhishui">洪水</a>，<span class="lyq">劳身焦思，居外十三年，过家门不敢入</span>。采用疏导之法，定<a href="#sanfentianxia">九州</a>、测九山、通九道、筑九堤，终告成功，使<a href="#zhongyuan">中原</a>成为宜居之地。禹为人勤勉务实，以身作则，可亲可信，受舜禅让为帝，在位10年后去世。大禹陵在今浙江省绍兴市南的会（<span class="lypinyin">kuài</span>）稽山。 <a href="#8.18" class="lyref">8.18</a> <a href="#8.21" class="lyref">8.21</a> <a href="#14.5" class="lyref">14.5</a> <a href="#20.1" class="lyref">20.1</a> </p>
 <p><a id="boyi"></a>伯益，又称益，是禹指定的继承人，他是<a href="#yingzheng">嬴姓</a>始祖，舜帝的山泽畜牧之官，曾助禹治水有功。但他佐政<a href="#gaoyao">日浅</a>，根基不牢，<a id="qi3"></a>禹的儿子启又有贤能，所以当他表示谦让时，诸侯就顺势拥启为帝，开启了中国第一个世袭制王朝<a href="#xiachao">夏朝</a>。</p>
 <p><a id="zangwenzhong"></a><span class="lycharname">臧（<span class="lypinyin">zāng</span>）文仲</span>（？—前617年）：名辰，谥号是文，鲁国庄公、僖公、文公的三朝重臣，为卿50余年。他思想开明，重民利商，娴于外交，《左传》、《国语·鲁语上》均有记载。前666年鲁国闹饥荒，他自告奋勇赴齐国借粮，并向质疑者解释说：<span class="lyq">“贤者急<a href="#bing4">病</a>而让夷，居官者当事不避难，在位者恤民之患，是以国家无违。”</span>（夷：平坦无碍。急病而让夷相当于趋难让易。<a id="xu4c"></a>恤：怜悯，体念。）臧氏家族的名望仅次于<a href="#sanhuan">三桓</a>，而且是鲁国唯一历经春秋始终的世卿大族。</p>
 <p>前549年（《左传·襄公二十四年》），叔孙氏第5代宗主叔孙豹访晋，<a id="fanxuanzi"></a>晋国正卿范宣子请教他什么叫“死而不朽”，他回答：<span class="lyq">鲁有先大夫曰臧文仲，既<a href="#mo4a">没</a>，其言立，其是之谓乎？豹闻之：大上有立德，其次有立功，其次有立言，虽久不废，此之谓不朽。……禄之大者，不可谓不朽。</span>臧文仲最著名的话，也许就是前683年（《左传·庄公十一年》）评价<a href="#songguo">宋国</a>当兴时说的：<span class="lyq"><a href="#yu">禹</a><a href="#tang">汤</a>罪己，其兴也悖焉；<a href="#xiachao">桀</a><a href="#zhou">纣</a>罪人，其亡也忽焉。</span>（悖：通“勃”，兴盛的样子。）</p>
