--- a/aboly.html
+++ b/aboly.html
@@ -916,7 +916,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">政</span>：禁令，法规。</p></li>
-<li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。</p></li>
+<li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。<span class="lyexample"><span>【例】</span><span>法家大成之作《韩非子·八经》说：<span class="lyq">设法度以齐民，信赏罚以尽民能。</span>另外，“齐民”还可以作名词，表示平民，齐就是同等。北魏贾思勰的农业技术名著《齐民要术》，命名有双关之意。</span></span></p></li>
 <li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都要根据上下文具体解读。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
 <li><p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p></li>
 <li><p><span class="lyterm">格</span>：纠正。<span class="lyexample"><span>【例】</span><span>《尚书·周书·冏命》（伪）：<span class="lyq"><a href="#sheng2a">绳</a><a href="#qian1">愆</a>纠谬，格其非心。</span>（非心：邪<a href="#pi4">僻</a>之心。）</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·尽心上》：<span class="lyq">善政不如善教之得民也。善政民畏之，善教民爱之。善政得民财，善教得民心。</span></span></span></p></li>
@@ -1554,7 +1554,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“居上不宽，为礼不敬，临丧不哀，吾何以观之哉？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">宽</span>：本义为房屋宽敞，引申指人度量大，宽厚。</p></li>
-<li><p><span class="lyterm">吾<a href="#heyi">何以</a>观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里有堪称一景、值得一瞧的意味，可以比较现代汉语的“可观”。<span class="lyexample"><span>【例】</span><span><a href="#8.11" class="lyref">8.11</a> <span class="lyq">其余不足观也已。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">虽小道，必有可观者焉。</span></span></span></p></li>
+<li><p><span class="lyterm">吾<a href="#heyi">何以</a>观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里有堪称一景、值得一瞧的意味，也就是重视，可以比较现代汉语的“可观”。<span class="lyexample"><span>【例】</span><span><a href="#8.11" class="lyref">8.11</a> <span class="lyq">其余不足观也已。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">虽小道，必有可观者焉。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4"></a><h1 class="lybodychapter">4. 里仁</h1>
@@ -1696,7 +1696,7 @@ img.characterimg {
 <p>现代汉语中，“礼让”已基本转为偏正结构，多用作动词，有礼貌地谦让。</p>
 </li>
 <li><p><a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：动词，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyterm">为国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传·襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。……世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，……犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：“能以礼让为国乎，何有？”周之流化，岂不大哉！</span></span></span></p></li>
-<li><p><a id="heyou"></a><span class="lyterm">何有</span>：字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢，有什么关系呢，有什么值得看重的呢，有什么好在乎的呢。这里是第一个意思，相当于 <a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《后汉书·班昭传》即引作：<span class="lyq">论语曰：“能以礼让为国，于从政乎何有？”</span><span class="lyexample"><span>【例】</span><span>《宋史·程琳传》：<span class="lyq">臣为陛下惜，于臣何有？</span>《左传·僖公二十四年》：<span class="lyq">除君之恶，唯力是视，蒲人狄人，余何有焉？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span></p></li>
+<li><p><a id="heyou"></a><span class="lyterm">何有</span>：“有何”的倒装，字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢（有何难），有什么关系呢（<a href="#heshiyu">有何事</a>），有什么值得看重的呢（有何重），有什么好在乎的呢（有何惜）。这里是第一个意思，相当于 <a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《后汉书·班昭传》即引作：<span class="lyq">《论语》曰：“能以礼让为国，于从政乎何有？”</span><span class="lyexample"><span>【例】</span><span>《宋史·程琳传》：<span class="lyq">臣为陛下惜，于臣何有？</span>《管子·小称》：<span class="lyq">人情非不爱其子也，于子之不爱，将何有于公？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4.14"></a><div class="lyblob">
@@ -2449,7 +2449,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="ji4"></a><span class="lyterm">济</span>：救助。<span class="lyexample"><span>【例】</span><span>成语“济世救人”。</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·梁惠王下》：<span class="lyq">乐民之乐者，民亦乐其乐；忧民之忧者，民亦忧其忧。乐以天下，忧以天下，然而不<a href="#wangdao">王</a>者，未之有也。</span></span></span></p></li>
-<li><p><span class="lyterm">何事于仁</span>：和仁有什么关系呢，意即怎么能说（只）是仁呢。<span class="lyterm">何事于</span>是用反问结构表示否定，have nothing to do with。</p></li>
+<li><p><span class="lyterm">何事于仁</span>：和仁有什么关系呢，也就是语气强烈地说：怎么能说（只）是仁呢。<a id="heshiyu"></a><span class="lyterm">何事于</span>用反问结构表示否定，have nothing to do with。可以比较 <a href="#4.13" class="lyref">4.13</a>  的<a href="#heyou">何有</a>。</p></li>
 <li>
 <p><a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申为道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《大戴礼记·哀公问五义》借孔子之口说：<span class="lyq">所谓圣人者，知通乎大道，应变而不<a href="#qiong2">穷</a>，能测万物之情性者也。</span>《尚书·周书·洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。……明作晰，聪作谋，睿作圣。</span>（作：则。）吕本中《童蒙训·卷上》记其祖父吕希哲语：<span class="lyq">惟<a href="#tianzi">天子</a>为能<a href="#bei4a">备</a>物，惟圣人为能备德。</span></span></span></p>
 <p>根据孔子之意，<a href="#ren2">仁</a>是凡夫俗子能达到的最高境界，所关爱的范围毕竟有限；圣是更进一步的理想化境界，要做到博施济众，连上古贤君都力有未逮。这就激励着历代儒者在修身向学之外积极投身政治，为大众谋福利。</p>
@@ -2482,9 +2482,9 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.2">7.2</a></div>
 <div class="lybloboriginaltext"><p>子曰：“默而识之，学而不厌，诲人不倦，何有于我哉？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">默而识（<span class="lypinyin">zhì</span>）之</span>：潜心静气地记住它（指所学的知识）。<a id="zhi4c"></a><span class="lyterm">识</span>：本义为标志，记号，用作动词，记住。<span class="lyexample"><span>【例】</span><span><a href="#7.28" class="lyref">7.28</a> <span class="lyq">择其善者而从之，多见而识之。</span></span></span><span class="lyseealso"><span>【参】</span><span>《周易·大畜》：<span class="lyq">君子以多识前言往行，以畜其德。</span>（畜：通“蓄”。）《荀子·劝学》：<span class="lyq">君子之学也，入乎耳，箸乎心，布乎四体，行乎动静。端而言，蠕而动，一可以为法则。小人之学也，入乎耳，出乎口。口耳之间则四寸耳，曷足以美七<a href="#chi3">尺</a>之躯哉？</span>（箸：通“著”，显明。<a id="yi1"></a>一：全。蠕：微动。曷（<span class="lypinyin">hé</span>）：何。）</span></span></p></li>
+<li><p><span class="lyterm">默而识（<span class="lypinyin">zhì</span>）之</span>：潜心静气地记住它（所学的知识）。<a id="zhi4c"></a><span class="lyterm">识</span>：本义为标志，记号，用作动词，记住。<span class="lyexample"><span>【例】</span><span><a href="#7.28" class="lyref">7.28</a> <span class="lyq">择其善者而从之，多见而识之。</span></span></span><span class="lyseealso"><span>【参】</span><span>《周易·大畜》：<span class="lyq">君子以多识前言往行，以畜其德。</span>（畜：通“蓄”。）《荀子·劝学》：<span class="lyq">君子之学也，入乎耳，箸乎心，布乎四体，行乎动静。端而言，蠕而动，一可以为法则。小人之学也，入乎耳，出乎口。口耳之间则四寸耳，曷足以美七<a href="#chi3">尺</a>之躯哉？</span>（箸：通“著”，显明。蠕：微动。<a id="yi1"></a>一：全。曷（<span class="lypinyin">hé</span>）：何。）</span></span></p></li>
 <li><p><a id="yan4"></a><span class="lyterm">厌</span>：吃饱，饱足，引申为满足，觉得够了，satiated，现代多用“餍”。（因过多而）厌烦、嫌恶是其后起义。</p></li>
-<li><p><span class="lyterm"><a href="#heyou">何有</a>于我哉？</span>：对我来说有什么难的呢？<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> </span></span></p></li>
+<li><p><span class="lyterm"><a href="#heyou">何有</a>于我哉？</span>：对我来说有什么难的呢？<span class="lyseealso"><span>【参】</span><span>孔子在政治上不得志，际遇也很坎坷，但对于好学、乐教一直很自信，也可以说对人的未来始终怀有信心，这是他生活动力的来源吧。所以他会说：<a href="#5.28" class="lyref">5.28</a> <span class="lyq">必有忠信如丘者焉，不如丘之好学也。</span>会觉得：<a href="#7.16" class="lyref">7.16</a> <span class="lyq">乐亦在其中矣。不义而富且贵，于我如浮云。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="7.3"></a><div class="lyblob">
@@ -3906,7 +3906,7 @@ img.characterimg {
 <li>
 <p><span class="lyterm">不受命而货殖</span>：不安分守己而跑去做生意。这是以玩笑的口吻对子贡的特长表示赞赏。<span class="lyseealso"><span>【参】</span><span><a href="#7.12" class="lyref">7.12</a> </span></span></p>
 <p><span class="lyterm">受命</span>：一说指安于<a href="#tianming">天命</a>，像颜回那样安贫乐道；一说指接受君上的任命，即<a href="#shi4a">出仕</a>，若如此，本章就发生在子贡出使列国之前；也有认为是指安守<a href="#qingdafushi">士</a>的本业，不越界。<span class="lyseealso"><span>【参】</span><span>《晋书·李重传》：<span class="lyq"><a href="#xianwang">先王</a>之制，士农工商有分，不<a href="#qiannu">迁</a>其业，所以利用厚生，各<a href="#si4b">肆</a>其力也。</span></span></span></p>
-<p><span class="lyterm">货殖</span>：经商营利。<a id="zhi2"></a><span class="lyterm">殖</span>：繁生，积聚，指以钱生钱。</p>
+<p><span class="lyterm">货殖</span>：经商营利。<span class="lyterm">货</span>：动词，做买卖，经商。其本义是财物，引申为商品。从字形上看，贝在古代可作钱币，化则有变易、流通的意思。<a id="zhi2"></a><span class="lyterm">殖</span>：繁生，积聚，指以钱生钱。</p>
 </li>
 <li><p><a id="yi4a"></a><span class="lyterm">亿</span>：猜测，预料，这里的对象是市场行情。这个意思后来写作“臆”。</p></li>
 </ul></div>
@@ -4124,7 +4124,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><span class="lyterm">民无信不立</span>：原意是说当政者对人民没有信用就站不稳当。断章取义地看，个人方面其实也是无信不立的，无论是信用还是信念。</p>
-<p>当时地广人稀，生产力水平低，靠天吃饭。如果是现代，恐怕孔子会把“安居”放在第一条了。</p>
+<p>当时地广人稀，生产力水平低，靠天吃饭。如果是现代，恐怕孔子会把“安居”放在前面了。</p>
 </li></ul></div>
 </div>
 <a id="12.8"></a><div class="lyblob">
@@ -4415,7 +4415,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子适卫，<a href="#ranqiu">冉有</a>仆。子曰：“庶矣哉！”冉有曰：“既庶矣，又何加焉？”曰：“富之。”曰：“既富矣，又何加焉？”曰：“教之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">仆</span>：御，驾车。这是<a href="#qirenkuinvyue">前497年</a>，孔子从鲁国抵达卫国的场景。</p></li>
-<li><p><span class="lyterm"><a href="#shu4b">庶</a></span>：众多，这里指卫国人口繁盛，一派欣欣向荣的气象。现代经常“<a href="#fu4">富</a>庶”连用，多偏指物质充足。<span class="lyseealso"><span>【参】</span><span><a href="#12.7" class="lyref">12.7</a> 。《管子·治国》开头说：<span class="lyq">凡治国之道，必先富民。民富则易治也，民贫则难治也。</span>《四书集注》：<span class="lyq">富而不教，则近于禽兽，故必立学校明礼义而教之。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#shu4b">庶</a></span>：众多，这里指卫国人口繁盛，一派欣欣向荣的气象。现代经常“<a href="#fu4">富</a>庶”连用，多偏指物质充足。<span class="lyseealso"><span>【参】</span><span><a href="#12.7" class="lyref">12.7</a>  子贡问政。《管子·治国》开头说：<span class="lyq">凡治国之道，必先富民。民富则易治也，民贫则难治也。</span>《齐民要术·序》称：<span class="lyq"><a href="#shangchao">殷</a><a href="#zhouchao">周</a>之盛，《<a href="#shijing">诗</a>》《<a href="#shangshu">书</a>》所述，<a href="#yao4">要</a>在安民，富而教之。</span>《四书集注》则说：<span class="lyq">富而不教，则近于禽兽，故必立学校，明礼义而教之。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="13.10"></a><div class="lyblob">
