--- a/aboly.html
+++ b/aboly.html
@@ -5471,14 +5471,14 @@ img.characterimg {
 <li><p><span class="lyterm">必为之辞</span>：非要替它找借口。<a id="ci2a"></a><span class="lyterm">辞</span>：动词，辩解，申辩，后来又从言语上的抗拒推广到行为上的不接受、开脱。<span class="lyexample"><span>【例】</span><span>《礼记·表记》：<span class="lyq">仁者之过易辞也。</span></span></span></p></li>
 <li><p><span class="lyterm">不患寡而患不均，不患贫而患不安</span>：根据文意，似应为：不患贫而患不均，不患寡而患不安。<a id="gua3a"></a><span class="lyterm">寡</span>：人少，这是其本义。<span class="lyseealso"><span>【参】</span><span>西汉董仲舒《春秋繁露·度制》开篇：<span class="lyq">孔子曰：“不患贫而患不均。”故有所积重，则有所空虚矣。大富则骄，大贫则忧；忧则为盗，骄则为暴——此众人之情也。</span></span></span></p></li>
 <li>
-<p><span class="lyterm">既<a href="#lai2">来</a>之，则安之</span>里的<span class="lyterm">来</span>和<span class="lyterm">安</span>，都是使动用法：使归从，使安定。</p>
-<p><a id="yuanren"></a>两个<span class="lyterm">之</span>都是指<span class="lyterm">远人</span>，与自己关系疏远者。它既可指地理的远近，如海外异邦；也可指立场的亲疏，如敌国外患；又可指文化的同异，如<a href="#yidihuaxia">四夷</a>。如果孔子这里专有所指，也许是说鲁国连年讨伐的近邻<a href="#zhuguo">邾国</a>。</p>
-<p>“既来之，则安之”作为现代成语，意思是既已来到这里，就安心待在这里。“之”的所指<a href="#shizhizhe">虚化</a>，常用于陌生的环境或岗位。</p>
+<p><span class="lyterm">既<a href="#lai2">来</a>之，则安之</span>里的<span class="lyterm">来</span>和<span class="lyterm">安</span>，都是使动用法：使归从，使安定。主语是<span class="lyterm">有<a href="#zhuhou">国</a>有<a href="#jia1">家</a>者</span>，即诸侯、卿大夫这样的居上位者。</p>
+<p>作为来、安的宾语，<a id="yuanren"></a>两个<span class="lyterm">之</span>都指<span class="lyterm">远人</span>，与自己关系疏远者。它既可指地理的远近，如海外异邦；也可指立场的亲疏，如敌国外患；又可指文化的同异，如<a href="#yidihuaxia">四夷</a>。如果孔子这里专有所指，也许是说鲁国连年讨伐的近邻<a href="#zhuguo">邾国</a>。</p>
+<p>现代成语“既来之，则安之”的意思是，既然已来到这里，就安心待在这里。“之”的所指<a href="#shizhizhe">虚化</a>，常用于陌生的环境或岗位。“来”、“安”就从及物动词变成不及物动词了，主语是所涉及的人。</p>
 </li>
 <li><p><span class="lyterm">干（<span class="lypinyin">gān</span>）戈</span>：泛指武器。<span class="lyterm">干</span>：盾牌。<span class="lyterm">戈</span>：一种顶端带横刃的长柄武器。后来有成语“大动干戈”。</p></li>
 <li><p><a id="xiaoqiang"></a><span class="lyterm">萧墙</span>：天子或诸侯建在门口的影壁墙，也就是 <a href="#3.22" class="lyref">3.22</a>  的<a href="#saimen">塞门</a>。<span class="lyterm">萧墙之内</span>：指鲁国宫内，意为<a href="#aigong">鲁哀公</a>。当时鲁政为<a href="#sanhuan">三桓</a>把持，君臣之间<a href="#mengwubo">气氛紧张</a>，后来哀公果然欲借越国之力收复君权，事见《左传》末篇“哀公二十七年”（前468年）。成语“祸起萧墙”指内部发生祸乱。</p></li>
 </ul>
-<p>从正面角度的 <a href="#13.16" class="lyref">13.16</a> <span class="lyq">近者说，远者来</span>，<span class="lyq">既来之，则安之</span>，到反面角度的<span class="lyq">远人不服而不能来也</span>至本章末尾，也很适用于现代企业的经营。如果不努力提高自身的竞争力、吸引力、凝聚力，整天忙于算计和内斗，这样的在位者就是<span class="lyq">肉食者鄙，未能远谋</span>（《左传·庄公十年》），这样的企业就 <a href="#15.12" class="lyref">15.12</a> <span class="lyq">必有近忧</span>了。</p>
+<p>从正面角度的 <a href="#13.16" class="lyref">13.16</a> <span class="lyq">近者说，远者来</span>，<span class="lyq">既来之，则安之</span>，到反面角度的<span class="lyq">远人不服而不能来也</span>至本章末尾，也适用于现代企业的经营。如果不努力提高自身的竞争力、吸引力、凝聚力，整天忙于算计和内斗，这样的决策人就是<span class="lyq">肉食者鄙，未能远谋</span>（《左传·庄公十年》），这样的企业就 <a href="#15.12" class="lyref">15.12</a> <span class="lyq">必有近忧</span>了。</p>
 </div>
 </div>
 <a id="16.2"></a><div class="lyblob">
