--- a/aboly.html
+++ b/aboly.html
@@ -673,7 +673,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="yingzheng"></a>前221年秦始皇嬴政统一天下后，自觉功过三皇，德兼五帝，于是创造了<span class="lykeyword">皇帝</span>的称号，一直沿用到清朝，简称为<span class="lykeyword">帝</span>。诸侯众臣的最高爵位升为<span class="lykeyword">王</span>，常被封与皇帝的近亲和有大功之臣。</p>
-<p>秦汉以后，<a href="#wangji">分封制</a>逐渐消亡，有爵位者从朝廷领取俸禄，不再拥有大片自主管理的领地，国与天下的范畴基本合二为一了。直到清末开眼看世界，才惊觉<span class="lyq">数千年来未有之变局</span>（李鸿章语）。</p>
+<p>秦汉以后，<a href="#wangji">分封制</a>逐渐消亡，有爵位者从朝廷领取俸禄，不再拥有大片自主管理的领地，国与天下的范畴基本合二为一了。直到晚清开眼看世界，才惊觉<span class="lyq">数千年来未有之变局</span>（李鸿章语）。</p>
 </li>
 </ol>
 </div>
@@ -2377,7 +2377,7 @@ img.characterimg {
 <a id="6.23"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.23">6.23</a></div>
 <div class="lybloboriginaltext"><p>子曰：“知者乐水，仁者乐山。知者动，仁者静。知者乐，仁者寿。”</p></div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">知者达于事理而周流无滞，有似于水，故乐水；仁者安于义理而厚重不迁，有似于山，故乐山。动、静以体言，乐、寿以效言也。动而不括，故乐；静而有常，故寿。</span>（括：滞碍。）</span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">知者<a href="#da2">达</a>于事理而周流无滞，有似于水，故乐水；仁者安于义理而厚重不迁，有似于山，故乐山。动、静以体言，乐、寿以效言也。动而不括，故乐；静而有常，故寿。</span>（括：滞碍。）</span></span></p></div>
 </div>
 <a id="6.24"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.24">6.24</a></div>
@@ -4982,7 +4982,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“骥不称其力，称其德也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">骥</span>（<span class="lypinyin">jì</span>）：千里马，常用来比喻杰出人才。<span class="lyexample"><span>【例】</span><span>曹操《步出夏门行》：<span class="lyq">老骥伏枥，志在千里。</span>（枥（<span class="lypinyin">lì</span>）：马槽。）</span></span></p></li>
-<li><p><span class="lyterm">德</span>：指马训练有素，驯良可靠。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">君子虽有兼能，而惟称其德也。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#de2">德</a></span>：指马训练有素，驯良可靠。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">君子虽有兼能，而惟称其德也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="14.34"></a><div class="lyblob">
@@ -5320,7 +5320,7 @@ img.characterimg {
 <a id="15.27"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.27">15.27</a></div>
 <div class="lybloboriginaltext"><p>子曰：“巧言乱德。小不忍则乱大谋。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">忍</span>：容忍、忍耐，或狠心、忍心，都讲得通。<span class="lyseealso"><span>【参】</span><span><a href="#3.1" class="lyref">3.1</a> 。《左传》中就有很多例证。僖公二十四年（前636年）夏，周襄王<span class="lyq">不忍小忿以弃郑亲</span>，借<a href="#yidihuaxia">狄</a>军讨伐了郑国，同年秋他的异母弟又借狄军叛乱，他被迫去郑国避难，自取其辱。昭公十三年（前529年），楚公子比继位后不愿残害兄弟，<span class="lyq">余不忍也</span>，但<span class="lyq">人将忍子</span>，招致杀身之祸。昭公二十年（前522年），接替<a href="#zichan">子产</a>为郑相的子太叔不忍施行<a href="#mengzheng">猛政</a>，其德能又不足以宽服民，郑国盗贼四起，只好纠之以猛。昭公二十五年（前517年），<a href="#zhaogong">鲁昭公</a>讨伐季氏失败，大夫子家懿伯建议由众臣背黑锅，<span class="lyq">诸臣伪劫君者，而负罪以出</span>，保全昭公的君位，昭公耻之，<span class="lyq">余不忍也</span>，于是弃国流亡。</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">忍</span>：容忍、忍耐，或狠心、忍心，都讲得通。<span class="lyseealso"><span>【参】</span><span><a href="#3.1" class="lyref">3.1</a> 。《左传》中就有很多例证。僖公二十四年（前636年）夏，周襄王<span class="lyq">不忍小忿以弃郑亲</span>，借<a href="#yidihuaxia">狄</a>军讨伐了郑国，同年秋他的异母弟又借狄军叛乱，他被迫去郑国避难，自取其辱。昭公十三年（前529年），楚公子比继位后不愿残害兄弟：<span class="lyq">余不忍也</span>，但<span class="lyq">人将忍子</span>，招致杀身之祸。昭公二十年（前522年），接替<a href="#zichan">子产</a>为郑相的子太叔不忍施行<a href="#mengzheng">猛政</a>，其德能又无法以宽服民，郑国盗贼四起，只好纠之以猛。昭公二十五年（前517年），<a href="#zhaogong">鲁昭公</a>讨伐季氏失败，大夫子家懿伯建议由众臣背黑锅，<span class="lyq">诸臣伪劫君者，而负罪以出</span>，保全昭公的君位，昭公耻之：<span class="lyq">余不忍也</span>，于是弃国流亡。</span></span></p></li></ul></div>
 </div>
 <a id="15.28"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.28">15.28</a></div>
@@ -5331,7 +5331,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#15.29">15.29</a></div>
 <div class="lybloboriginaltext"><p>子曰：“人能弘道，非道弘人。”</p></div>
 <div class="lyblobannotation">
-<ul class="lyblobitemize"><li><p><span class="lyterm">弘</span>：广大，用作动词，broaden。</p></li></ul>
+<ul class="lyblobitemize"><li><p><span class="lyterm">弘</span>：广大，用作动词，使广大，broaden。</p></li></ul>
 <p>这种简洁辨证的话，诠释角度很多，可以自行体会。比如，<a href="#dao4">道</a>可以通过努力求得，孔子对人的自我完善持乐观态度。作为对比，老庄道家强调个人在茫茫宇宙中的柔弱无力，注重顺生自守。<span class="lyseealso"><span>【参】</span><span>《庄子·养生主》：<span class="lyq">吾生也有涯，而知也无涯。以有涯随无涯，<a href="#dai4">殆</a>已！已而为知者，殆而已矣！</span>（随：追逐。已而：然后。为知：求知。）</span></span></p>
 </div>
 </div>
@@ -6190,13 +6190,13 @@ img.characterimg {
 <a id="19.9"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.9">19.9</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“君子有三变：望之俨然，即之也温，听其言也厉。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="yan3"></a><span class="lyterm">俨（<span class="lypinyin">yǎn</span>）然</span>：庄重严肃的样子。<span class="lyseealso"><span>【参】</span><span><a href="#7.38" class="lyref">7.38</a> </span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="yan3"></a><span class="lyterm">俨（<span class="lypinyin">yǎn</span>）然</span>：庄重严肃的样子。<span class="lyseealso"><span>【参】</span><span><a href="#7.38" class="lyref">7.38</a> <span class="lyq">子温而厉，威而不猛，恭而安。</span></span></span></p></li></ul></div>
 </div>
 <a id="19.10"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.10">19.10</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“君子信而后劳其民，未信，则以为厉己也；信而后谏，未信，则以为谤己也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">则以为厉己也</span>的主语是“其民”。<span class="lyterm"><a href="#li4e">厉</a></span>：虐害，残酷对待。思考：你能不能举出历史上“信而后劳其民”的反例？它们产生了什么结果和影响？</p></li>
+<li><p><span class="lyterm">则以为厉己也</span>的主语是“其民”。<span class="lyterm"><a href="#li4d">厉</a></span>：动词，虐害，残酷对待。思考：你能不能举出历史上“信而后劳其民”的反例？它们产生了什么结果和影响？</p></li>
 <li><p><span class="lyterm">则以为谤己也</span>隐含的主语是“其君”。<span class="lyterm">谤</span>：本义为公开批评指责别人的过失，引申为毁谤，用夸张不实的话来攻击丑化。<span class="lyexample"><span>【例】</span><span>《国语·周语上》：<span class="lyq"><a href="#lixuanyouping">厉王</a>虐，国人谤王。</span></span></span><span class="lyseealso"><span>【参】</span><span>苏轼1071年《上神宗皇帝书》：<span class="lyq">未信而谏，圣人不<a href="#yu3a">与</a>；交浅言深，君子所戒。</span></span></span></p></li>
 </ul></div>
 </div>
